# copier-python-template

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  copier.yml  docker-compose.yml  pyproject.toml
.github/workflows/: e2e.yml  lint-test.yml
template/: Dockerfile.jinja  Makefile.jinja  README.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja  {% if git_platform == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja
template/tests/: conftest.py.jinja
template/tests/test_example/: test_hello.py.jinja
template/{% if git_platform == 'github' %}.github{% endif %}/workflows/: lint-test.yml.jinja
template/{{ package_name }}/: example.py.jinja
tests/: conftest.py  test_generation.py  test_github_actions.py  test_gitlab_ci.py  test_make.py
tests/test_example/: test_hello.py
